first-without-display-of-card

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,13 @@
     <form class="search-form" id="search-form">
         <input
           type="text"
-          name="searchQuery"
+          name="searchQuery"          
           autocomplete="off"
           placeholder="Search images..."
         />
         <button type="submit">Search</button>
       </form>
+      <div class="photo-card"></div>
 </body>
 <script type="module" src="./js/script.js"></script>
 <script type="module" src="./js/find-photo-api.js"></script>
