css-formalization-decor

--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="./style.css">
+    
 </head>
 <body>
-    <form class="search-form" id="search-form">
+    <form class="search-form form-inline" id="search-form">
         <input
           type="text"
           name="searchQuery"          
           autocomplete="off"
           placeholder="Search images..."
+          class="form-control mr-sm-2"
         />
-        <button type="submit">Search</button>
+        <button type="submit" class="btn btn-primary my-2 my-sm-0">Search</button>
       </form>
       <div class="photo-card"></div>
 </body>
+
 <script type="module" src="./js/script.js"></script>
 <script type="module" src="./js/find-photo-api.js"></script>
 </html>
